# rust-bootcamp-microservices

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile-auth  Dockerfile-health  Stage 1.md  Stage 2.md  docker-compose.yaml  railway-health.json  railway.json
.github/workflows/: prod.yml
src/auth-service/: auth.rs  sessions.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
