[package]
name = "rust-bootcamp-microservices"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
tonic = "0.13.1" # used by all
prost = "0.13.5" # used by all - matching tonic version
tokio = { version = "1.27", features = ["macros", "rt-multi-thread", "time"] } # used by all
uuid = { version = "1.2", features = ["v4"] } # used by auth and health-check services
pbkdf2 = { version = "0.12", features = ["simple"] } # used by auth service
rand_core = { version = "0.6.4", features = ["std"] } # used by auth service
rand = "0.8" # used by auth service for secure random number generation
clap = { version = "4.2", features = ["derive"] } # used by client

[build-dependencies]
tonic-build = "0.13.1" # used by all
